src/test/ui-fulldeps/plugin-plus-extern-crate.stderr
error: compiler plugin used as an ordinary library
  --> $DIR/plugin-plus-extern-crate.rs:12:1
   |
LL | extern crate macro_crate_test; //~ ERROR compiler plugin used as an ordinary library
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/plugin-plus-extern-crate.rs:8:9
   |
LL | #![deny(plugin_as_library)]
   |         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

